--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,36 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/header.css">
+    <link rel="stylesheet" href="assets/styles/variables.css">
     <script defer src="js/main.js"></script>
     <title>Trabalho</title>
 </head>
 <body>
-<header>
+  <header>
     <nav class="container-header">
-        <ul>
-            <li><a href="#">Home</a></li>
-        </ul>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/login.html">Login</a></li>
+      </ul>
     </nav>
-</header>
-<main>
+  </header>
+  <main>
     <div id="courseModal" class="modal">
-        <div id="courseModalContent" class="modal-content">
-            <h2 id="courseModalTitle"></h2>
-            <p id="courseModalDescription"></p>
-            <button id="courseModalSubscribe" class="subscribe-button">Inscrever-se</button>
-            <span id="courseModalSubscribed" class="subscribed-checkmark" style="display: none;">✓</span>
-            <button id="courseModalClose" class="close-button">Fechar</button>
-        </div>
+      <div id="courseModalContent" class="modal-content">
+        <h2 id="courseModalTitle"></h2>
+        <p id="courseModalDescription"></p>
+        <button id="courseModalSubscribe" class="subscribe-button">Inscrever-se</button>
+        <span id="courseModalSubscribed" class="subscribed-checkmark" style="display: none;">✓</span>
+        <button id="courseModalClose" class="close-button">Fechar</button>
+      </div>
     </div>
     <section class="container-main">
-        <h2>Cursos inscritos</h2>
-        <ul id="subscribedCoursesList"></ul>
-        <p id="totalHours">Total de horas: 0</p>
-        <input type="text" id="searchInput" placeholder="Pesquisar..." onkeyup="filterCourses()">
-        <ul id="courseList">
-            <p id="backend-await">Waiting for Backend... please run docker-compose up on backend folder!</p>
-        </ul>
+      <h2>Cursos inscritos</h2>
+      <ul id="subscribedCoursesList"></ul>
+      <p id="totalHours">Total de horas: 0</p>
+      <input type="text" id="searchInput" placeholder="Pesquisar..." onkeyup="filterCourses()">
+      <ul id="courseList">
+        <p id="backend-await">Waiting for Backend... please run docker-compose up on backend folder!</p>
+      </ul>
     </section>
-</main>
+  </main>
 </body>
 </html>
