--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,36 +7,46 @@
     <link rel="stylesheet" href="assets/styles/header.css">
     <link rel="stylesheet" href="assets/styles/variables.css">
     <script defer src="js/main.js"></script>
-    <title>Trabalho</title>
+    <title>Home</title>
 </head>
 <body>
-  <header>
+<header>
     <nav class="container-header">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/login.html">Login</a></li>
-      </ul>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="./pages/contato.html">Contato</a></li>
+            <li><a href="./pages/sobre.html">Sabre</a></li>
+            <li><a href="./pages/login.html">Login</a></li>
+        </ul>
+        <div class="logo">
+            <h1>DevLearn</h1>
+        </div>
     </nav>
-  </header>
-  <main>
+</header>
+<main>
     <div id="courseModal" class="modal">
-      <div id="courseModalContent" class="modal-content">
-        <h2 id="courseModalTitle"></h2>
-        <p id="courseModalDescription"></p>
-        <button id="courseModalSubscribe" class="subscribe-button">Inscrever-se</button>
-        <span id="courseModalSubscribed" class="subscribed-checkmark" style="display: none;">✓</span>
-        <button id="courseModalClose" class="close-button">Fechar</button>
-      </div>
+        <div id="courseModalContent" class="modal-content">
+            <h2 id="courseModalTitle"></h2>
+            <p id="courseModalDescription"></p>
+            <button id="courseModalSubscribe" class="subscribe-button">Inscrever-se</button>
+            <span id="courseModalSubscribed" class="subscribed-checkmark" style="display: none;">✓</span>
+            <button id="courseModalClose" class="close-button">Fechar</button>
+        </div>
     </div>
     <section class="container-main">
-      <h2>Cursos inscritos</h2>
-      <ul id="subscribedCoursesList"></ul>
-      <p id="totalHours">Total de horas: 0</p>
-      <input type="text" id="searchInput" placeholder="Pesquisar..." onkeyup="filterCourses()">
-      <ul id="courseList">
-        <p id="backend-await">Waiting for Backend... please run docker-compose up on backend folder!</p>
-      </ul>
+        <h2>Cursos inscritos</h2>
+        <ul id="subscribedCoursesList"></ul>
+        <p id="totalHours">Total de horas: 0</p>
+        <input type="text" id="searchInput" placeholder="Pesquisar..." onkeyup="filterCourses()">
+        <ul id="courseList">
+            <p id="backend-await">Waiting for Backend... please run docker-compose up on backend folder!</p>
+        </ul>
     </section>
-  </main>
+</main>
+<footer>
+    <div class="container-header">
+        <p>© DevLearn 2024 Todos os direitos reservados</p>
+    </div>
+</footer>
 </body>
 </html>
