--- a/front-end/pages/admin.html
+++ b/front-end/pages/admin.html
@@ -14,6 +14,8 @@
     <nav class="container-header">
         <ul>
             <li><a href="../index.html">Home</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="sobre.html">Sabre</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
