--- a/front-end/pages/admin.html
+++ b/front-end/pages/admin.html
@@ -18,6 +18,9 @@
             <li><a href="sobre.html">Sabre</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
+        <div class="logo">
+            <h1>DevLearn</h1>
+        </div>
     </nav>
 </header>
  
