fix typos and added alerts and confirmation for deletion

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="./pages/contato.html">Contato</a></li>
-            <li><a href="./pages/sobre.html">Sabre</a></li>
+            <li><a href="./pages/sobre.html">Sobre</a></li>
             <li><a href="./pages/login.html">Login</a></li>
         </ul>
         <div class="logo">
