--- a/front-end/pages/contato.html
+++ b/front-end/pages/contato.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="contato.html">Contato</a></li>
-            <li><a href="sobre.html">Sabre</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
         <div class="logo">
