--- a/front-end/pages/login.html
+++ b/front-end/pages/login.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="contato.html">Contato</a></li>
-            <li><a href="sobre.html">Sabre</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
         <div class="logo">
@@ -27,7 +27,7 @@
 <body>
     <div class="container">
         <form id="form-login">
-            <h2>Register Form</h2>
+            <h2>Sign in Form</h2>
             <div class="input-container">
               <i class="fa fa-user icon"></i>
               <input class="input-field" type="text" placeholder="Username" name="usrnm" id="username">
@@ -38,7 +38,7 @@
               <input class="input-field" type="password" placeholder="Password" name="psw" id="password">
             </div>
 
-            <button type="submit" class="btn" id="btnLogin">Register</button>
+            <button type="submit" class="btn" id="btnLogin">Signin</button>
           </form>
     </div>
     <script src="../js/login.js"></script>
