admin page responsive

--- a/front-end/pages/admin.html
+++ b/front-end/pages/admin.html
@@ -25,7 +25,7 @@
 </header>
  
 <body>
-    <div id="courseList"></div>
+    <div id="courseList" class="list"></div>
     <div>
         <hr>
         <input class="course course-title" placeholder="Title" id="new-title"></input>
